--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "server",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "bump:patch": "grunt bump:patch"
   },
   "type": "module",
   "devDependencies": {
